# gaze-estimation

./: pyproject.toml  setup.cfg  setup.py
src/mobilegaze/: __init__.py  detect.py  evaluate.py  main.py  mpii_train.py  reparameterize.py
src/mobilegaze/utils/: __init__.py  helpers.py
