[project]
name = "gaze-estimation"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "haganelego", email = "hagane01061998@icloud.com" }
]
dependencies = [
    "numpy==2.0.1",
    "onnxruntime==1.19.0",
    "opencv-python==4.10.0.84",
    "pillow==10.2.0",
    "torch==2.4.0",
    "torchvision==0.19.0",
    "tqdm==4.66.5",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gaze_estimation"]
