[metadata]
name = mobilegaze
version = 0.0.1

[options]
include_package_data = True
packages =
    mobilegaze
    mobilegaze.utils
    mobilegaze.models
    mobilegaze.config
    mobilegaze.utils.helpers
    mobilegaze.utils.datasets
package_dir =
    = src
install_requires =
    numpy==1.26.4
    onnxruntime>=1.19.0
    opencv-python>=4.10.0.84
    pillow>=10.2.0
    torch>=2.4.0
    torchvision>=0.19.0
    tqdm>=4.66.5
    setuptools>=75.6.0
    scikit-learn>=1.6.0
